@@ -1,17 +1,17 @@
 /* Copyright (c) 2007 Google Inc.
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*     http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
-*/
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 
 //
 //  GDataQueryGoogleBase.h
@@ -19,15 +19,14 @@
 
 #import "GDataQuery.h"
 
-@interface GDataQueryGoogleBase : GDataQuery 
+@interface GDataQueryGoogleBase : GDataQuery
 
 + (GDataQueryGoogleBase *)googleBaseQueryWithFeedURL:(NSURL *)feedURL;
 
 - (NSString *)googleBaseQuery;
 - (void)setGoogleBaseQuery:(NSString *)str;
 
-- (int)maxValues;
-- (void)setMaxValues:(int)val;
+- (NSInteger)maxValues;
+- (void)setMaxValues:(NSInteger)val;
 
 @end
-
